--- a/slides/slides_2021-03-16.html
+++ b/slides/slides_2021-03-16.html
@@ -47,7 +47,7 @@ March 16, 2021  -- 6:30pm to 8:30pm
 1. Did you **complete** the pre-workshop **survey**?  (check your email)
 
 
-<div class="countdown" id="timer_604fbc31" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_6051194f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">15</span></code>
 </div>
 
@@ -152,6 +152,34 @@ Use the smallest, simplest, most built-in data possible
 Include commands on a strict “need to run” basis
 ]
 
+
+---
+class: middle, center
+
+# Assignment
+
+Create an object using a name
+
+## `&lt;-`
+alt-dash
+
+"gets value from"
+
+`answer &lt;- 5 * 5`
+
+---
+class: middle, center
+
+# Pipe
+
+Chain functions together (a tidyverse or magritter conjunction)
+
+## `%&gt;%`  
+Ctrl/Cmd-Shift-M
+
+"and then"
+
+`answer %&gt;% sqrt()`
 
 
 ---
