--- a/slides/slides_2021-03-16.html
+++ b/slides/slides_2021-03-16.html
@@ -47,8 +47,8 @@ March 16, 2021  -- 6:30pm to 8:30pm
 1. Did you **complete** the pre-workshop **survey**?  (check your email)
 
 
-<div class="countdown" id="timer_6051194f" style="right:0;bottom:0;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">15</span></code>
+<div class="countdown" id="timer_60515e8b" style="right:0;bottom:0;" data-warnwhen="0">
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 .f6.black-40[
